<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="on_d_way_to_delhi">On The Way To DELHI</string>
    <string name="Monuments">Monuments</string>
    <string name="Religious">Religious</string>
    <string name="Restaurants">Restaurants</string>
    <string name="Parks">Parks</string>
    <string name="qutubminar">Qutub Minar</string>
    <string name="humayun_tomb">Humayun’s Tomb</string>
    <string name="red_fort">Red Fort</string>
    <string name="jama_masjid">Jama Masjid</string>
    <string name="alai_darwaza">Alai Darwaza</string>
    <string name="diwan">Diwan</string>
    <string name="alai_minar">Alai Minar</string>
    <string name="jantar_mantar">Jantar Mantar</string>
    <string name="rang_mahal">Rang Mahal</string>
    <string name="vishwa_shanti_stupa">Vishwa Shanti Stupa</string>
    <string name="india_gate">India Gate</string>
    <string name="coronation_durbar_park">Coronation Durbar Park</string>
    <string name="nehru_park">Nehru Park</string>
    <string name="talkatora_gardens">Talkatora Gardens</string>
    <string name="lodi_garden">Lodi Gardens</string>
    <string name="garden_of_five_senses">Garden of Five Senses</string>
    <string name="lotus_temple">Lotus Temple</string>
    <string name="fatehpuri_mosque">Fatehpuri Mosque</string>
    <string name="khirki_masjid">Khirki Masjid</string>
    <string name="chhatarpur_temple">Chhatarpur Temple</string>
    <string name="laskhminarayan_temple">Laskhminarayan Temple</string>
    <string name="iskcon_temple">ISKCON Temple</string>
    <string name="malai_mandir">Malai Mandir</string>
    <string name="akshardham">Akshardham</string>
    <string name="indian_accent">Indian Accent</string>
    <string name="tamra">Tamra</string>
    <string name="dakshin">Dakshin</string>
    <string name="jw_marriott">JW Marriott</string>
    <string name="cafe_lota">Cafe Lota</string>
    <string name="pan_asian">Pan Asian</string>
    <string name="delhi_pavilion">Delhi Pavilion</string>
    <string name="sorrento">Sorrento</string>
    <string name="barbeque_nation">Barbeque Nation</string>
    <string name="zaffran">Zaffran</string>
</resources>
